Fix some warnings from pmd